fixed hyperlink colors and spacing on services page

--- a/_scss/_global.scss
+++ b/_scss/_global.scss
@@ -114,7 +114,7 @@ section {
 
 .general-content {
   a {
-    color: #343434;
-    font-weight: 700;
+    color: $themegreen;
+    // font-weight: 700;
   }
 }
